Prod V2/main/default/objects/Package_Price_Book__c/Package_Price_Book__c.object-meta.xml
<CustomObject>
    <label>Package - Price Book</label>
    <nameField>
        <displayFormat>PPB-{00000000}</displayFormat>
        <label>Package - Price Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package - Price Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>