Prod V2/main/default/objects/Package_Price_Book__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Package - Price Books</relationshipLabel>
    <relationshipName>Package_Price_Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>