Prod V2/main/default/objects/Package_Price_Book__c/fields/Package_Brand__c.field-meta.xml
<CustomField>
    <fullName>Package_Brand__c</fullName>
    <formula>TEXT(Package__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Brand</label>
    <type>Text</type>
</CustomField>