Prod V2/main/default/objects/Package_Price_Book__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Package - Price Books</relationshipLabel>
    <relationshipName>Package_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>