Prod V2/main/default/objects/Package_Price_Book__c/fields/Price_Book_Brand__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Brand__c</fullName>
    <formula>TEXT( Price_Book__r.Brand__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Brand</label>
    <type>Text</type>
</CustomField>