Prod V2/main/default/objects/Package_Price_Book__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <formula>Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>